--- a/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
+++ b/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+
+.App-span {
+margin: 0 10px;
+
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
