--- a/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
+++ b/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
@@ -43,3 +43,23 @@ margin: 0 10px;
     transform: rotate(360deg);
   }
 }
+
+body{
+  width: 100;
+  height: 17vh;
+  background-color: #192a56;
+}
+
+#logo{
+  position: absolute;
+  top: 3%;
+  left: 73%;
+  transform: translate(-3%,-10%);
+}
+
+
+#logo path:nth-child(1){
+  stroke-dasharray: 30px;
+  stroke-dashoffset: 10px;
+}
+
