--- a/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
+++ b/src/main/java/com/JSG/JSGApplication/myproject/src/App.css
@@ -54,54 +54,93 @@ body{
   position: absolute;
   top: 3%;
   left: 73%;
-  transform: translate(-3%,-10%);
+  /* transform: translate(-3%,-10%); */
+  animation: fill 0.5s ease forwards 3.5s;
 }
 
 
 #logo path:nth-child(1){
-  stroke-dasharray: 200px;
-  stroke-dashoffset: 50px;
+  stroke-dasharray: 572px;
+  stroke-dashoffset: 572px;
+  animation: line-anim 3s ease forwards;
 }
 
 #logo path:nth-child(2){
-  
+  stroke-dasharray: 463px;
+  stroke-dashoffset: 463px;
+  animation: line-anim 3s ease forwards 0.3s;
 }
 #logo path:nth-child(3){
-  
+  stroke-dasharray: 495px;
+  stroke-dashoffset: 495px;
+  animation: line-anim 3s ease forwards 0.6s;
 }
 
 #logo path:nth-child(4){
-  
+  stroke-dasharray: 227px;
+  stroke-dashoffset: 227px;
+  animation: line-anim 3s ease forwards 0.9s;
 }
 
 #logo path:nth-child(5){
-  
+  stroke-dasharray: 635px;
+  stroke-dashoffset: 635px;
+  animation: line-anim 3s ease forwards 1.2s;
 }
 #logo path:nth-child(6){
-
+  stroke-dasharray: 604px;
+  stroke-dashoffset: 604px;
+  animation: line-anim 3s ease forwards 1.5s;
 }
 
 #logo path:nth-child(7){
-  
+  stroke-dasharray: 463px;
+  stroke-dashoffset: 463px;
+  animation: line-anim 3s ease forwards 1.8s;
 }
 
 #logo path:nth-child(8){
-  
+  stroke-dasharray: 572px;
+  stroke-dashoffset: 572px;
+  animation: line-anim 3s ease forwards 2.1s;
 }
 
 #logo path:nth-child(9){
-  
+  stroke-dasharray: 345px;
+  stroke-dashoffset: 345px;
+  animation: line-anim 3s ease forwards 2.4s;
 }
 
 #logo path:nth-child(10){
- 
+  stroke-dasharray: 574px;
+  stroke-dashoffset: 574px;
+  animation: line-anim 3s ease forwards 2.7s;
 }
 
 #logo path:nth-child(11){
-  
+  stroke-dasharray: 254px;
+  stroke-dashoffset: 254px;
+  animation: line-anim 3s ease forwards 3.0s;
 }
 
 #logo path:nth-child(12){
-  
+  stroke-dasharray: 673px;
+  stroke-dashoffset: 673px;
+  animation: line-anim 3s ease forwards 3.3s;
 }
 
+@keyframes line-anim{
+  to{
+    stroke-dashoffset: 0;
+
+  }
+}
+
+@keyframes fill{
+  from{
+    fill: transparent;
+  }
+  to {
+    fill: white;
+  }
+}
